[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Entities/TargetDummy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Png/entities/target_dummy_2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/AnimatedBar/AnimatedBar.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=5]
resource_name = "damage_taken"

[sub_resource type="Animation" id=1]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 7 )

[node name="TargetDummy" type="KinematicBody2D" groups=["Enemy"]]
collision_layer = 64
collision_mask = 0
script = ExtResource( 1 )

[node name="Timers" type="Node" parent="."]

[node name="HealthBarDisplayTimer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage_taken = SubResource( 5 )
anims/death = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.993957 )
texture = ExtResource( 2 )

[node name="Body" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="Hitbox" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, 6 )
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
margin_left = -10.0
margin_top = 15.0
margin_right = 11.0
margin_bottom = 18.0
display_on_start = false

[connection signal="timeout" from="Timers/HealthBarDisplayTimer" to="." method="_on_HealthBarDisplayTimer_timeout"]
